--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "my-three-app",
   "version": "1.0.0",
   "scripts": {
-    "dev": "parcel src/main/Text/DOM/index.html",
+    "dev": "parcel src/index.html",
     "build": "parcel build src/main/Text/index.html"
   },
   "keywords": [],
